--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,7 @@
 @import url(../intro/__list/intro__list.css);
 @import url(../intro/__text/intro__text.css);
 @import url(../intro/__title/intro__title.css);
-
+@import url(../intro/__list-span/intro__list-span.css);
 
 .intro {
   max-width: 690px;
