--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,8 @@
 @import url(../place/__paragraph/place__paragraph.css);
 @import url(../place/__title/place__title.css);
 @import url(../place/__website/place__website.css);
-
+@import url(../place/__website-link/place__website-link.css);
+@import url(../place/__website-url-heading/place__website__url-heading.css);
 
 
 .place {
