--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -29,7 +29,7 @@
 @media screen and (max-width: 767px) {
 
   .intro {
-    margin: 64px 16px;
+    margin: 64px auto;
     max-width: 288px;
   }
 }
