--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,7 @@
 .cover__link {
     max-width: 1184px;
     min-height: 740px;
-    margin: 92px auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
