--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,15 @@
 @import url(../cover/__link/cover__link.css);
 @import url(../cover/__subtitle/cover__subtitle.css);
 @import url(../cover/__title/cover__title.css);
+
+
+.cover {
+    margin: 92px auto ;
+}
+
+@media screen and (max-width: 767px) {
+  
+    .cover {
+        margin: 72px auto ;
+    }
+}
