--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,10 +2,10 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
-  background: #2A2C2F;
   padding-top: 28px;
   padding-bottom: 24px;
   text-rendering: optimizeLegibility;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 @media screen and (max-width: 767px) {
