--- a/blocks/place/__column/place__column.css
+++ b/blocks/place/__column/place__column.css
@@ -1,11 +1,14 @@
 .place__column {
   display: flex;
-  flex-direction: column;
-  margin-right: 40px;
+  padding-bottom: 0;
+  margin-bottom: 48px;
+  flex-directio n: column;
+  
+  border: solid red 1px;
 }
 
 .place__column:nth-of-type(2) {
-  margin-right: 0;
+  margin-righ t: 0;
 }
 
 @media screen and (max-width: 1279px) {
