--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,8 +7,9 @@
   line-height: 1.06;
   color: #FFFFFF;
   margin-top: 0;
-  margin-left: 0;
-  margin-bottom: 48px;
+  padding: 0;
+  align-self: center;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 1279px) {
