--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,19 +4,23 @@
 @import url(../place/__title/place__title.css);
 @import url(../place/__website/place__website.css);
 @import url(../place/__website-link/place__website-link.css);
-@import url(../place/__website-url-heading/place__website__url-heading.css);
+@import url(../place/__website-url-heading/place__website-url-heading.css);
 
 
 .place {
   max-width: 984px;
   margin-bottom: 80px;
-  display: flex;
+  display: grid;
+  grid-template-columns: min-content minmax(min-content, max-content);
+  gap: 48px 40px;
 }
 
 @media screen and (max-width: 1279px) {
    
   .place {
     max-width: 928px; 
+    gap: 48px 32px;
+    margin-bottom: 77px;
   }
 }
 
@@ -24,8 +28,9 @@
   
   .place {
     max-width: 720px;
-    margin-bottom: 80px;
+    margin-bottom: 78px;
     margin-top: 0;
+    gap: 48px 28px;
   }
 }
 
@@ -33,8 +38,9 @@
   
   .place {
     max-width: 320px;
-    margin-bottom: 64px;
-    flex-direction: column;
+    margin-bottom: 48px;
+    grid-template-columns: minmax(min-content, max-content);
+    gap: 0;
   }
 
   .place:nth-of-type(1) {
@@ -49,7 +55,7 @@
     margin-bottom: 58px;
   }
   .place:nth-of-type(4) {
-    margin-bottom: 55px;
+    margin-bottom: 83px;
   }
   .place:nth-of-type(5) {
     margin-bottom: 75px;
