--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,8 @@
 .intro__list {
-    width: 690px;
+    max-width: 690px;
     margin-left: 0;
     margin: 0;
     padding: 0;
-    font-family: Inter;
-    font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 1.5;
