--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,8 @@
 .intro__text {
-  width: 690px;
-  min-height: 209px;
+  max-width: 690px;
   margin-top: 40px;
   margin-bottom: 32px;
   padding: 0;
-  font-family: Inter;
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.63;
@@ -15,15 +12,13 @@
 @media screen and (max-width: 1023px) {
 
   .intro__text {
-    width: 720px;
-    min-height: 209px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 767px) {
 
   .intro__text {
-    width: 288px;
-    min-height: 522px;
+    max-width: 288px;
   }
 }
