--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,7 @@
 .intro__title {
-  width: 690px;
+  max-width: 690px;
   margin: 0;
   padding: 0;
-  font-family: Inter;
-  font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 1.07;
@@ -13,8 +11,7 @@
 @media screen and (max-width: 1023px) {
 
   .intro__title {
-    width: 720px;
-    height: 58px;
+    max-width: 720px;
     font-size: 54px;
     line-height: 1.07;
     color: #FFFFFF;
@@ -24,8 +21,7 @@
 @media screen and (max-width: 767px) {
 
   .intro__title {
-    width: 288px;
-    height: 70px;
+    max-width: 288px;
     font-size: 32px;
     line-height: 1.09;
     color: #FFFFFF;
