--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -22,14 +22,14 @@
 @media screen and (max-width: 1023px) {
 
   .intro {
-    margin: 88px 24px;
+    margin: 88px 24px 85px;
   }
 }
 
 @media screen and (max-width: 767px) {
 
   .intro {
-    margin: 64px auto;
+    margin: 64px auto 74px;
     max-width: 288px;
   }
 }
