--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,21 +1,18 @@
 .lead__title {
-    width: 720px;
-    margin: 0 auto;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 1.04;
-    text-align: center;
-    color: #FFFFFF; 
+  max-width: 720px;
+  margin: 0 auto;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 1.04;
+  text-align: center;
+  color: #FFFFFF; 
 }
 
 @media screen and (max-width: 767px) {
 
-    .lead__title {
-      width: 288px;
-      height: 88px;
-      font-size: 40px;
-      line-height: 1.1;
-    }
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 1.1;
+  }
 }
