--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
   padding-top: 28px;
   padding-bottom: 24px;
   text-rendering: optimizeLegibility;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 @media screen and (max-width: 767px) {
