--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,16 +1,15 @@
 .place__website {
-    width: 456px;
-    height: 46px;
-    align-self: end;
-  }
+  max-width: 456px;
+  align-self: end;
+}
 
 
 @media screen and (max-width: 1023px) {
   
-    .place__website {
-      width: 352px;
-    }
+  .place__website {
+    max-width: 352px;
   }
+}
 
 @media screen and (max-width: 767px) {
   
